test-cases/final-dump/trait_error_wrong_param.wybe
# Verify an abstract function cannot introduce multiple type variables
# that bounded by the current trait.

trait

abstract wrong_param(x:T<:_, y:U<:_): string
